test/ll_parser_primary_command_test.test
*PARSER*:
    print selector ""
        block standard: data paragraph
        block standard: math
        block standard: text
        block standard: label
        block standard: code
        block TOP LEVEL: data
        block TOP LEVEL: LINE LEVEL
        block TOP LEVEL: TOP LEVEL
    print pass
        top
        operator [code, math]
        primary []
    trace [+ parser commands, + warnings ]
    define primary variable ``X Y 1'' [code]
           with module M with location 100
    print primary variable ``''
        block standard: variable ``X Y 1'' [code]
                        with location 100 in module M
    test primary ``X Y 1'' [code]
                   ^^^^^
        found variable ``X Y 1'' M 100
    test primary ``X Y 1 FOO'' [code]
                   ^^^^^
        found variable ``X Y 1'' M 100
ERROR: in line ##: no definition found:
    test primary ``X Y'' [code]
                 ^^^^^^^
